@@ -1,7 +1,13 @@
 
   Pre-Release 0.8.9.2
 
-  o BUG-FIX: fix typo in template key-binding installation script [Colin Palmer]
+  o BUG-FIX: Fix typo in template key-binding installation script [Colin Palmer]
+
+  o CHANGE:  The bonding algorithm was changed so that Iron-Sulfur clusters are now
+             bonded using the dictionary (and so appear "cubic") [Hannah Bridges]
+
+  o BUG-FIX: The slow update on deleting deviant extra distance restraints has been
+             been replaced with a fasater version
 
 -----
 
